[gd_scene load_steps=9 format=3 uid="uid://b2gfgn0bmewhl"]

[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_8g7kl"]
[ext_resource type="Texture2D" uid="uid://dmfyp3ktdm3qg" path="res://Assets/tower.png" id="1_g5pij"]
[ext_resource type="Texture2D" uid="uid://cknen22gehao8" path="res://Assets/button.png" id="3_uxbk0"]
[ext_resource type="Texture2D" uid="uid://cb2boub316o0p" path="res://Assets/buttonHovered.png" id="4_5r2i6"]
[ext_resource type="FontFile" uid="uid://cw3h0pbmthd16" path="res://Assets/PixelyFont.ttf" id="5_3yld8"]

[sub_resource type="Animation" id="Animation_6oigc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8yw74"]
resource_name = "transition"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ka4f3"]
_data = {
"RESET": SubResource("Animation_6oigc"),
"transition": SubResource("Animation_8yw74")
}

[node name="Tower" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8g7kl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TowerTextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -320.0
offset_right = 128.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g5pij")

[node name="StatisticsLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6875
anchor_top = -0.00277778
anchor_right = 1.00078
anchor_bottom = 1.0
offset_top = 2.0
offset_right = -0.998413
theme_override_fonts/font = ExtResource("5_3yld8")
text = "statistics:

tower level: 0/5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="UpgradeTowerButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 320.0
offset_top = -240.0
offset_right = 560.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
texture_normal = ExtResource("3_uxbk0")
texture_hover = ExtResource("4_5r2i6")
stretch_mode = 0

[node name="UpgradeTowerLabel" type="Label" parent="Background/UpgradeTowerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_3yld8")
text = "upgrade tower:
1000 stone"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 240.0
offset_right = 80.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
texture_normal = ExtResource("3_uxbk0")
texture_hover = ExtResource("4_5r2i6")
stretch_mode = 0

[node name="BackLabel" type="Label" parent="Background/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_3yld8")
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ka4f3")
}

[connection signal="pressed" from="Background/UpgradeTowerButton" to="." method="_on_upgrade_tower_button_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_back_button_pressed"]
